2008-02-26 Mark Grondona <mgrondona@llnl.gov>

	* : tag v0.13.

	* configure, src/etc/Makefile.am :
	  Re-run ./bootstrap.

	* src/util/edac-ctl.in : 
	  Improve quietness with --quiet option.

	* src/etc/edac.init.in : 
	  Load EDAC DIMM labels in init script.

	* src/etc/udev.rules.in, src/etc/Makefile.am, configure.ac  :
	  Remove udev rules file. Using udev rules to trigger the load
	  of EDAC DIMM labels is not reliable as the rules are triggered
	  too early on boot (and edac-ctl script may not even be availble
	  at that time.)

2008-02-08 Mark Grondona <mgrondona@llnl.gov>

	* : tag v0.12.

2008-02-08 Mark Grondona <mgrondona@llnl.gov>

	* src/util/edac-ctl.in, src/util/edac-util.8.in : 
	  Remove --load, --unload, and --driver options. 
	  These aren't needed since EDAC drivers will be 
	  automatically loaded on most current distros.

	* src/etc/driver.db : Removed.

	* src/etc/edac.init.in : Remove driver load/unload 
	  functionality which is unnecessary. Init script now does
	  nothing unless /etc/sysconfig/edac exists and sets
	  $EDAC_DRIVER (Fallback case).

	* src/etc/udev.rules.in : Add udev rules file to 
	  automatically register DIMM labels using edac-ctl
	  when an EDAC driver is loaded. (Replaces similar 
	  functionality from init script).

	* src/etc/Makefile.am, configure.ac, edac-utils.spec : 
	  Create and install udev rules.

	* configure, src/etc/Makefile.in :
	  Re-run bootstrap.

2008-01-25 Mark Grondona <mgrondona@llnl.gov>

	* src/lib/libedac.c (edac_totals_refresh) :
	  Fix unchecked return code as found by Coverity.

2007-11-06 Mark Grondona <mgrondona@llnl.gov>

	* src/etc/labels.db : Add Dell PowerEdge 1850 and Asus A85NX, A8N-E,
	  and "KFN5-D SLI" to labels database.

	* src/util/edac-ctl.in : Allow parsing of `lspci -n` output without
	  "Class" string (lspci 2.2.3).

	* : tag v0.11.

2007-10-12 Mark Grondona <mgrondona@llnl.gov>

	* debian/ : Remove debian directory as requested by 